refactor: add 'jupyter' setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
                 "export $(grep -v '^#' .env | xargs); $SHELL"
             ]
         }
-    }
+    },
+    "jupyter.notebookFileRoot": "${workspaceFolder}"
 }
