--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,17 @@
             ],
             "django": true,
             "justMyCode": false
+        },
+        {
+            "name": "Python: Launch Scrapy Spider",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "scrapy",
+            "args": [
+                "runspider",
+                "${file}"
+            ],
+            "console": "integratedTerminal"
         }
     ]
 }
