refactor: ignore S101 Ruff rule in tests

--- a/ruff.toml
+++ b/ruff.toml
@@ -28,5 +28,5 @@ ignore = [
 ]
 
 [lint.per-file-ignores]
-"**/tests/**" = ["D104", "SLF001", "INP001"]
+"**/tests/**" = ["D104", "SLF001", "INP001", "S101"]
 "**/settings.py" = ["ERA001"]
