--- a/.codespellrc
+++ b/.codespellrc
@@ -1,3 +1,3 @@
 [codespell]
-skip = .gitignore,*.cache*,*.html,*.json,*.yml,*.yaml,
+skip = .gitignore,*.cache*,*.html,*.json,*.yml,*.yaml,*.ipynb,
 ignore-regex=.*codespell:ignore
